--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 
 </style>
 </head>
-<body class="book toc2 toc-left">
+<body class="article toc2 toc-left">
 <div id="header">
 <h1><span class="image"><img src="images/icons/cherrytree.png" alt="Cherrytree"></span> Cherrytree User Manual</h1>
 <div class="details">
@@ -465,69 +465,70 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_macos_not_tested">3.4. macOS (Not Tested)</a></li>
 </ul>
 </li>
-<li><a href="#_quick_start">4. Quick start</a>
+<li><a href="#_test">4. Test</a></li>
+<li><a href="#_quick_start">5. Quick start</a>
 <ul class="sectlevel2">
-<li><a href="#_interface">4.1. Interface</a></li>
-<li><a href="#_node_management">4.2. Node Management</a></li>
-<li><a href="#_insert_objects">4.3. Insert Objects</a></li>
-<li><a href="#_save_your_notes">4.4. Save Your Notes</a></li>
-<li><a href="#_export_the_document">4.5. Export the Document</a></li>
+<li><a href="#_interface">5.1. Interface</a></li>
+<li><a href="#_node_management">5.2. Node Management</a></li>
+<li><a href="#_insert_objects">5.3. Insert Objects</a></li>
+<li><a href="#_save_your_notes">5.4. Save Your Notes</a></li>
+<li><a href="#_export_the_document">5.5. Export the Document</a></li>
 </ul>
 </li>
-<li><a href="#_files">5. Files</a>
+<li><a href="#_files">6. Files</a>
 <ul class="sectlevel2">
-<li><a href="#_creating_and_opening">5.1. Creating and Opening</a></li>
-<li><a href="#_saving">5.2. Saving</a></li>
-<li><a href="#_page_setup_and_printing">5.3. Page Setup and Printing</a></li>
-<li><a href="#_importing">5.4. Importing</a></li>
-<li><a href="#_exporting">5.5. Exporting</a></li>
+<li><a href="#_creating_and_opening">6.1. Creating and Opening</a></li>
+<li><a href="#_saving">6.2. Saving</a></li>
+<li><a href="#_page_setup_and_printing">6.3. Page Setup and Printing</a></li>
+<li><a href="#_importing">6.4. Importing</a></li>
+<li><a href="#_exporting">6.5. Exporting</a></li>
 </ul>
 </li>
-<li><a href="#test">6. Nodes</a>
+<li><a href="#_nodes">7. Nodes</a>
 <ul class="sectlevel2">
-<li><a href="#_creating_nodes">6.1. Creating Nodes</a></li>
-<li><a href="#_managing_nodes">6.2. Managing Nodes</a></li>
+<li><a href="#_creating_nodes">7.1. Creating Nodes</a></li>
+<li><a href="#_managing_nodes">7.2. Managing Nodes</a></li>
 </ul>
 </li>
-<li><a href="#_text">7. Text</a>
+<li><a href="#_text">8. Text</a>
 <ul class="sectlevel2">
-<li><a href="#_plain_text">7.1. Plain Text</a></li>
-<li><a href="#_rich_text">7.2. Rich Text</a></li>
-<li><a href="#_automatic_syntax_highlighting">7.3. Automatic Syntax Highlighting</a></li>
-<li><a href="#_searching">7.4. Searching</a></li>
+<li><a href="#_plain_text">8.1. Plain Text</a></li>
+<li><a href="#_rich_text">8.2. Rich Text</a></li>
+<li><a href="#_automatic_syntax_highlighting">8.3. Automatic Syntax Highlighting</a></li>
+<li><a href="#_searching">8.4. Searching</a></li>
 </ul>
 </li>
-<li><a href="#_objects">8. Objects</a>
+<li><a href="#_objects">9. Objects</a>
 <ul class="sectlevel2">
-<li><a href="#_images">8.1. Images</a></li>
-<li><a href="#_tables">8.2. Tables</a></li>
-<li><a href="#_codebox">8.3. Codebox</a></li>
-<li><a href="#_files_2">8.4. Files</a></li>
-<li><a href="#_links">8.5. Links</a></li>
-<li><a href="#_anchors">8.6. Anchors</a></li>
-<li><a href="#_table_of_contents">8.7. Table of Contents</a></li>
-<li><a href="#_time_stamps">8.8. Time Stamps</a></li>
-<li><a href="#_special_characters">8.9. Special characters</a></li>
+<li><a href="#_images">9.1. Images</a></li>
+<li><a href="#_tables">9.2. Tables</a></li>
+<li><a href="#_codebox">9.3. Codebox</a></li>
+<li><a href="#_files_2">9.4. Files</a></li>
+<li><a href="#_links">9.5. Links</a></li>
+<li><a href="#_anchors">9.6. Anchors</a></li>
+<li><a href="#_table_of_contents">9.7. Table of Contents</a></li>
+<li><a href="#_time_stamps">9.8. Time Stamps</a></li>
+<li><a href="#_special_characters">9.9. Special characters</a></li>
 </ul>
 </li>
-<li><a href="#_settings">9. Settings</a>
+<li><a href="#_settings">10. Settings</a>
 <ul class="sectlevel2">
-<li><a href="#_text_and_code">9.1. Text and Code</a></li>
-<li><a href="#_text_2">9.2. Text</a></li>
-<li><a href="#_rich_text_2">9.3. Rich Text</a></li>
-<li><a href="#_plain_text_and_code">9.4. Plain Text and Code</a></li>
-<li><a href="#_tree_1">9.5. Tree 1</a></li>
-<li><a href="#_tree_2">9.6. Tree 2</a></li>
-<li><a href="#_fonts">9.7. Fonts</a></li>
-<li><a href="#_links_2">9.8. Links</a></li>
-<li><a href="#_toolbar">9.9. Toolbar</a></li>
-<li><a href="#_keyboard_shortcuts">9.10. Keyboard Shortcuts</a></li>
-<li><a href="#_miscellaneous">9.11. Miscellaneous</a></li>
+<li><a href="#_text_and_code">10.1. Text and Code</a></li>
+<li><a href="#_text_2">10.2. Text</a></li>
+<li><a href="#_rich_text_2">10.3. Rich Text</a></li>
+<li><a href="#_plain_text_and_code">10.4. Plain Text and Code</a></li>
+<li><a href="#_tree_1">10.5. Tree 1</a></li>
+<li><a href="#_tree_2">10.6. Tree 2</a></li>
+<li><a href="#_fonts">10.7. Fonts</a></li>
+<li><a href="#_links_2">10.8. Links</a></li>
+<li><a href="#_toolbar">10.9. Toolbar</a></li>
+<li><a href="#_keyboard_shortcuts">10.10. Keyboard Shortcuts</a></li>
+<li><a href="#_miscellaneous">10.11. Miscellaneous</a></li>
 </ul>
 </li>
-<li><a href="#_contributors">10. Contributors</a></li>
-<li><a href="#_supporters">11. Supporters</a></li>
-<li><a href="#_license">12. License</a></li>
+<li><a href="#_contributors">11. Contributors</a></li>
+<li><a href="#_supporters">12. Supporters</a></li>
+<li><a href="#_license">13. License</a></li>
 </ul>
 </div>
 </div>
@@ -1057,7 +1058,13 @@ If you move the bundle into your <strong>C:</strong> drive, your path will look 
 </div>
 </div>
 <div class="sect1">
-<h2 id="_quick_start">4. Quick start</h2>
+<h2 id="_test">4. Test</h2>
+<div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
+<h2 id="_quick_start">5. Quick start</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>This brief quick start guide covers the following material:</p>
@@ -1085,7 +1092,7 @@ If you move the bundle into your <strong>C:</strong> drive, your path will look 
 </ul>
 </div>
 <div class="sect2">
-<h3 id="_interface">4.1. Interface</h3>
+<h3 id="_interface">5.1. Interface</h3>
 <div class="paragraph">
 <p>Cherrytree&#8217;s interface consists of four sections, highlighted in <a href="#figure-4.01">Figure 4.01</a>:</p>
 </div>
@@ -1166,7 +1173,7 @@ If you move the bundle into your <strong>C:</strong> drive, your path will look 
 </div>
 </div>
 <div class="sect2">
-<h3 id="_node_management">4.2. Node Management</h3>
+<h3 id="_node_management">5.2. Node Management</h3>
 <div class="paragraph">
 <p>Cherrytree allows you to organize notes using a <a href="#_nodes">tree structure</a>.</p>
 </div>
@@ -1222,7 +1229,7 @@ If you move the bundle into your <strong>C:</strong> drive, your path will look 
 </div>
 </div>
 <div class="sect2">
-<h3 id="_insert_objects">4.3. Insert Objects</h3>
+<h3 id="_insert_objects">5.3. Insert Objects</h3>
 <div class="paragraph">
 <p>Objects can be inserted from the menu bar under <strong>Edit</strong>, <a href="#figure-4.07">Figure 4.07</a>, or the toolbar, <a href="#figure-4.08">Figure 4.08</a>.</p>
 </div>
@@ -1273,7 +1280,7 @@ If you move the bundle into your <strong>C:</strong> drive, your path will look 
 </div>
 </div>
 <div class="sect2">
-<h3 id="_save_your_notes">4.4. Save Your Notes</h3>
+<h3 id="_save_your_notes">5.4. Save Your Notes</h3>
 <div class="olist arabic">
 <ol class="arabic" start="1">
 <li>
@@ -1304,7 +1311,7 @@ If you move the bundle into your <strong>C:</strong> drive, your path will look 
 </div>
 </div>
 <div class="sect2">
-<h3 id="_export_the_document">4.5. Export the Document</h3>
+<h3 id="_export_the_document">5.5. Export the Document</h3>
 <div class="olist arabic">
 <ol class="arabic" start="1">
 <li>
@@ -1334,7 +1341,7 @@ If you move the bundle into your <strong>C:</strong> drive, your path will look 
 </div>
 </div>
 <div class="sect1">
-<h2 id="_files">5. Files</h2>
+<h2 id="_files">6. Files</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Documents can be managed from the <strong>File</strong> menu, shown in <a href="#figure-5.01">Figure 5.01</a>, or the toolbar, <a href="#figure-5.02">Figure 5.02</a>.</p>
@@ -1348,7 +1355,7 @@ If you move the bundle into your <strong>C:</strong> drive, your path will look 
 <p><span class="image"><img src="images/file-toolbar.png" alt="File Menu."></span></p>
 </div>
 <div class="sect2">
-<h3 id="_creating_and_opening">5.1. Creating and Opening</h3>
+<h3 id="_creating_and_opening">6.1. Creating and Opening</h3>
 <div class="paragraph">
 <p>Cherrytree opens to the same state as when it last closed or to a new document if no previous state exists. To create a new document, click <strong>File</strong> within the menu bar and select <strong>New Instance</strong>.</p>
 </div>
@@ -1361,7 +1368,7 @@ If you move the bundle into your <strong>C:</strong> drive, your path will look 
 </div>
 </div>
 <div class="sect2">
-<h3 id="_saving">5.2. Saving</h3>
+<h3 id="_saving">6.2. Saving</h3>
 <div class="sect3">
 <h4 id="_saving_to_the_current_file">Saving to the Current File</h4>
 <div class="paragraph">
@@ -1472,7 +1479,7 @@ Other applications might not provide functionality to unlock files that have bee
 </div>
 </div>
 <div class="sect2">
-<h3 id="_page_setup_and_printing">5.3. Page Setup and Printing</h3>
+<h3 id="_page_setup_and_printing">6.3. Page Setup and Printing</h3>
 <div class="paragraph">
 <p><strong>Page Setup</strong>, found in the <strong>File</strong> menu, allows you to set your document size, orientation, and margins.</p>
 </div>
@@ -1504,7 +1511,7 @@ Other applications might not provide functionality to unlock files that have bee
 </div>
 </div>
 <div class="sect2">
-<h3 id="_importing">5.4. Importing</h3>
+<h3 id="_importing">6.4. Importing</h3>
 <div class="paragraph">
 <p>Cherrytree&#8217;s import feature can be accessed from the <strong>Import</strong> menu.</p>
 </div>
@@ -1606,7 +1613,7 @@ This process may take a few minutes when importing many files or larger files.
 </div>
 </div>
 <div class="sect2">
-<h3 id="_exporting">5.5. Exporting</h3>
+<h3 id="_exporting">6.5. Exporting</h3>
 <div class="paragraph">
 <p>Cherrytree&#8217;s export feature can be accessed from the <strong>Export</strong> menu.</p>
 </div>
@@ -1678,7 +1685,7 @@ This process may take a few minutes when importing many files or larger files.
 </div>
 </div>
 <div class="sect1">
-<h2 id="test">6. Nodes</h2>
+<h2 id="_nodes">7. Nodes</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>In computer science, a tree is a data structure consisting of nodes which are connected by edges. In the tree shown in <a href="#figure-6.01">Figure 6.01</a>, <strong>my_book</strong> is the root node. <strong>Part 3</strong> is one of three child nodes that belong to <strong>my_book</strong> and is also the parent node of <strong>Chapter 6</strong>.</p>
@@ -1695,7 +1702,7 @@ This process may take a few minutes when importing many files or larger files.
 <p><span class="image"><img src="images/tree_demo.png" alt="Tree demo."></span></p>
 </div>
 <div class="sect2">
-<h3 id="_creating_nodes">6.1. Creating Nodes</h3>
+<h3 id="_creating_nodes">7.1. Creating Nodes</h3>
 <div class="olist arabic">
 <ol class="arabic" start="1">
 <li>
@@ -1767,7 +1774,7 @@ Read-only nodes <strong>can</strong> be deleted.
 </div>
 </div>
 <div class="sect2">
-<h3 id="_managing_nodes">6.2. Managing Nodes</h3>
+<h3 id="_managing_nodes">7.2. Managing Nodes</h3>
 <div class="paragraph">
 <p>Nodes are primarily managed from the <strong>Tree</strong> menu, shown in  <a href="#figure-6.04">Figure 6.04</a>, which can be found in the menu bar or by right-clicking a node.</p>
 </div>
@@ -1930,31 +1937,31 @@ This will also delete any children of the selected node.
 </div>
 </div>
 <div class="sect1">
-<h2 id="_text">7. Text</h2>
+<h2 id="_text">8. Text</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_plain_text">7.1. Plain Text</h3>
+<h3 id="_plain_text">8.1. Plain Text</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_rich_text">7.2. Rich Text</h3>
+<h3 id="_rich_text">8.2. Rich Text</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_automatic_syntax_highlighting">7.3. Automatic Syntax Highlighting</h3>
+<h3 id="_automatic_syntax_highlighting">8.3. Automatic Syntax Highlighting</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_searching">7.4. Searching</h3>
+<h3 id="_searching">8.4. Searching</h3>
 
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_objects">8. Objects</h2>
+<h2 id="_objects">9. Objects</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_images">8.1. Images</h3>
+<h3 id="_images">9.1. Images</h3>
 <div class="paragraph">
 <p>Content</p>
 </div>
@@ -1969,13 +1976,13 @@ This will also delete any children of the selected node.
 </div>
 </div>
 <div class="sect2">
-<h3 id="_tables">8.2. Tables</h3>
+<h3 id="_tables">9.2. Tables</h3>
 <div class="paragraph">
 <p>content</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_codebox">8.3. Codebox</h3>
+<h3 id="_codebox">9.3. Codebox</h3>
 <div class="paragraph">
 <p>content</p>
 </div>
@@ -2249,37 +2256,37 @@ This will also delete any children of the selected node.
 </div>
 </div>
 <div class="sect2">
-<h3 id="_files_2">8.4. Files</h3>
+<h3 id="_files_2">9.4. Files</h3>
 <div class="paragraph">
 <p>Content</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_links">8.5. Links</h3>
+<h3 id="_links">9.5. Links</h3>
 <div class="paragraph">
 <p>Content</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_anchors">8.6. Anchors</h3>
+<h3 id="_anchors">9.6. Anchors</h3>
 <div class="paragraph">
 <p>Content</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_table_of_contents">8.7. Table of Contents</h3>
+<h3 id="_table_of_contents">9.7. Table of Contents</h3>
 <div class="paragraph">
 <p>Content</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_time_stamps">8.8. Time Stamps</h3>
+<h3 id="_time_stamps">9.8. Time Stamps</h3>
 <div class="paragraph">
 <p>Content</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_special_characters">8.9. Special characters</h3>
+<h3 id="_special_characters">9.9. Special characters</h3>
 <div class="paragraph">
 <p>Content</p>
 </div>
@@ -2287,80 +2294,80 @@ This will also delete any children of the selected node.
 </div>
 </div>
 <div class="sect1">
-<h2 id="_settings">9. Settings</h2>
+<h2 id="_settings">10. Settings</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_text_and_code">9.1. Text and Code</h3>
+<h3 id="_text_and_code">10.1. Text and Code</h3>
 <div id="figure-9.01" class="paragraph">
 <div class="title">Figure 9.01</div>
 <p><span class="image"><img src="images/pref01.png" alt="Text and Code."></span></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_text_2">9.2. Text</h3>
+<h3 id="_text_2">10.2. Text</h3>
 <div id="figure-9.02" class="paragraph">
 <div class="title">Figure 9.02</div>
 <p><span class="image"><img src="images/pref02.png" alt="Text."></span></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_rich_text_2">9.3. Rich Text</h3>
+<h3 id="_rich_text_2">10.3. Rich Text</h3>
 <div id="figure-9.03" class="paragraph">
 <div class="title">Figure 9.03</div>
 <p><span class="image"><img src="images/pref03.png" alt="Rich Text."></span></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_plain_text_and_code">9.4. Plain Text and Code</h3>
+<h3 id="_plain_text_and_code">10.4. Plain Text and Code</h3>
 <div id="figure-9.04" class="paragraph">
 <div class="title">Figure 9.04</div>
 <p><span class="image"><img src="images/pref04.png" alt="Plain Text and Code."></span></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_tree_1">9.5. Tree 1</h3>
+<h3 id="_tree_1">10.5. Tree 1</h3>
 <div id="figure-9.05" class="paragraph">
 <div class="title">Figure 9.05</div>
 <p><span class="image"><img src="images/pref05.png" alt="Tree 1."></span></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_tree_2">9.6. Tree 2</h3>
+<h3 id="_tree_2">10.6. Tree 2</h3>
 <div id="figure-9.06" class="paragraph">
 <div class="title">Figure 9.06</div>
 <p><span class="image"><img src="images/pref06.png" alt="Tree 2."></span></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_fonts">9.7. Fonts</h3>
+<h3 id="_fonts">10.7. Fonts</h3>
 <div id="figure-9.07" class="paragraph">
 <div class="title">Figure 9.07</div>
 <p><span class="image"><img src="images/pref07.png" alt="Fonts."></span></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_links_2">9.8. Links</h3>
+<h3 id="_links_2">10.8. Links</h3>
 <div id="figure-9.08" class="paragraph">
 <div class="title">Figure 9.08</div>
 <p><span class="image"><img src="images/pref08.png" alt="Links."></span></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_toolbar">9.9. Toolbar</h3>
+<h3 id="_toolbar">10.9. Toolbar</h3>
 <div id="figure-9.09" class="paragraph">
 <div class="title">Figure 9.09</div>
 <p><span class="image"><img src="images/pref09.png" alt="Toolbar."></span></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_keyboard_shortcuts">9.10. Keyboard Shortcuts</h3>
+<h3 id="_keyboard_shortcuts">10.10. Keyboard Shortcuts</h3>
 <div id="figure-9.10" class="paragraph">
 <div class="title">Figure 9.10</div>
 <p><span class="image"><img src="images/pref10.png" alt="Keyboard Shortcuts."></span></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_miscellaneous">9.11. Miscellaneous</h3>
+<h3 id="_miscellaneous">10.11. Miscellaneous</h3>
 <div id="figure-9.11" class="paragraph">
 <div class="title">Figure 9.11</div>
 <p><span class="image"><img src="images/pref11.png" alt="Miscellaneous."></span></p>
@@ -2369,7 +2376,7 @@ This will also delete any children of the selected node.
 </div>
 </div>
 <div class="sect1">
-<h2 id="_contributors">10. Contributors</h2>
+<h2 id="_contributors">11. Contributors</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Cherrytree is written and maintained by Giuseppe Penone.</p>
@@ -2477,7 +2484,7 @@ About &gt; Credits' from the menu.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_supporters">11. Supporters</h2>
+<h2 id="_supporters">12. Supporters</h2>
 <div class="sectionbody">
 <div class="ulist">
 <ul>
@@ -3157,7 +3164,7 @@ document file for cloud syncing}</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_license">12. License</h2>
+<h2 id="_license">13. License</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License or (at your option) any later version.</p>
@@ -3175,7 +3182,7 @@ Public License for more details.</p>
 <div id="footer">
 <div id="footer-text">
 Version 0.38.6<br>
-Last updated 2018-10-28 16:33:49 Eastern Daylight Time
+Last updated 2018-10-28 19:51:04 Eastern Daylight Time
 </div>
 </div>
 </body>
