--- a/cherrytree_manual.ctb_HTML/Files--Exporting.html
+++ b/cherrytree_manual.ctb_HTML/Files--Exporting.html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Exporting</u></b></h1>Exporting<br />To export notes from another file:<br />1. Select one of the following options from the Export menu:<br />• Export to PDF<br /><br />• Export to HTML<br /><br />• Export to Multiple Plain Text Files<br /><br />• Export to Single Plain Text File<br /><br />• Export to CherryTreeDocument<br /><br /><br />• Within the Involved Nodes menu, select the scope of your document to be exported:<br />• Selected Text Only<br /><br />• Selected Node Only<br /><br />• Selected Node and Subnodes<br /><br />• All in Tree<br /><br /><br />• Additional options are available depending on the export type:<br />• Include Node name - Displays the name of each Node at the top of its page. This may be redundant if you have headers within the pages of your notes.<br /><br />• New Node in New Page - Applies page breaks at the end of nodes within the exported document.<br /><br />• Links Tree in Every Page - When enabled all web pages contain a table of contents. If this option is disabled, only the index.html contains a table of contents.<br /><br /><br />When exporting to HTML, all nodes are copied to the root folder of your chosen directory as .html files. The main HTML file is named index.html.<br /></div></div>
+<div class="page"><h1><b><u>Exporting</u></b></h1><br /><h1>Exporting</h1><br /><br /><br />	To export notes from another file:<br /><br />	1. Select one of the following options from the <strong>Export </strong>menu:<br /><br />		• Export to PDF<br /><br />		• Export to HTML<br /><br />		• Export to Multiple Plain Text Files<br /><br />		• Export to Single Plain Text File<br /><br />		• Export to CherryTreeDocument<br /><br />	2. Within the <strong>Involved Nodes</strong> menu, select the scope of your document to be exported:<br />	<br />		• Selected Text Only<br /><br />		• Selected Node Only<br /><br />		• Selected Node and Subnodes<br /><br />		• All in Tree<br /><br />	3. Additional options are available depending on the export type:<br />	<br />		• <strong>Include Node name</strong> - Displays the name of each Node at the top of its page. This may be redundant if you have headers within the pages of your notes.<br /><br />		• <strong>New Node in New Page</strong> - Applies page breaks at the end of nodes within the exported document.<br /><br />		• <strong>Links Tree in Every Page</strong> - When enabled all web pages contain a table of contents. If this option is disabled, only the index.html contains a table of contents.<br /><br />	When exporting to HTML, all nodes are copied to the root folder of your chosen directory as .html files. The main HTML file is named <strong>index.html</strong>.<br /></div></div>
 </body></html>
