--- a/cherrytree_manual.ctb_HTML/Files--Importing.html
+++ b/cherrytree_manual.ctb_HTML/Files--Importing.html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Importing</u></b></h1>Importing<br />Notes are imported into Cherrytree from the Import menu, located within the <a href="http://#menu-bar">menu bar</a>.<br />1. Select one of the following options from the Import menu:<br />• From CherrTree File<br /><br />• From Plain Text File<br /><br />• From Folder of Plain Text Files<br /><br />• From HTML File<br /><br />• From Folder of HTML Files<br /><br />• From Basket Folder<br /><br />• From EssentialPIM HTML File<br /><br />• From Gnote Folder<br /><br />• From KeepNote Folder<br /><br />• From Keynote File<br /><br />• From Knowit File<br /><br />• From Leo File<br /><br />• From Mempad File<br /><br />• From NoteCase File<br /><br />• From RedNotebook Folder<br /><br />• From Toyboy Folder<br /><br />• From Treepad Lite File<br /><br />• From TuxCards File<br /><br />• From Zim Folder<br /><br /><br />• Select a file or folder to import then click Open.<br /><br />• In the Who is the parent? menu, select one of the following options:<br />• The Tree Root - Each imported file is added to a top-level node.<br /><br />• The Selected Node - Each imported file is added to a child node of the selected node.<br /><br /><br />• Click OK.<br /><br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>This process may take a few minutes when importing many files or larger files.</td></tr></table><br /></div></div>
+<div class="page"><h1><b><u>Importing</u></b></h1><br /><h1>Importing</h1><br /><br /><br />	Notes are imported into Cherrytree from the Import menu, located within the <a href="http://#menu-bar">menu bar</a>.<br /><br />	1. Select one of the following options from the Import menu:<br /><br />		• From CherrTree File<br /><br />		• From Plain Text File<br /><br />		• From Folder of Plain Text Files<br /><br />		• From HTML File<br /><br />		• From Folder of HTML Files<br /><br />		• From Basket Folder<br /><br />		• From EssentialPIM HTML File<br /><br />		• From Gnote Folder<br /><br />		• From KeepNote Folder<br /><br />		• From Keynote File<br /><br />		• From Knowit File<br /><br />		• From Leo File<br /><br />		• From Mempad File<br /><br />		• From NoteCase File<br /><br />		• From RedNotebook Folder<br /><br />		• From Toyboy Folder<br /><br />		• From Treepad Lite File<br /><br />		• From TuxCards File<br /><br />		• From Zim Folder<br /><br /><br />	2. Select a file or folder to import then click <strong>Open</strong>.<br /><br />	3. In the <strong>Who is the parent?</strong> menu, select one of the following options:<br />	<br />		• <strong>The Tree Root </strong>- Each imported file is added to a top-level node.<br /><br />		• <strong>The Selected Node</strong> - Each imported file is added to a child node of the selected node.<br /><br /><br />	4. Click<strong> OK</strong>.<br /><br />	<strong>NOTE:</strong> This process may take a few minutes when importing many files or larger files.<br /></div></div>
 </body></html>
