--- a/cherrytree_manual.ctb_HTML/Files--Nodes--Creating_Nodes.html
+++ b/cherrytree_manual.ctb_HTML/Files--Nodes--Creating_Nodes.html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Creating Nodes</u></b></h1> Creating Nodes<br />1. Select Add Node within the Tree to display the New Node Properties menu.<br /><br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>Add Node creates a sibling to the selected node or a top-level node if no node is selected. To create a child nodes, select Tree &gt; Add Subnode.</td></tr></table><br />1. Provide a name for the node within New Node Properties.<br /><br />2. (Optional) Select any additional options:<br />• Bold - Increase the font-weight of the node title within the tree view.<br /><br />• Use Selected Color - Change the text color of the node title within the tree view.<br /><br />• Use Selected Icon - Change the node’s icon color.<br /><br />• Node Type - Select a node type.<br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>View 7. Text for more detail.</td></tr></table><br /><br />• Tags for searching - adds keywords that can be used to find the node in a search. Multiple tags can be separated by a blank space.<br /><br />• Read Only - Can be enabled to lock a node in its current state. This must be disabled to edit or delete the node.<br /><br /><br />• Click OK to finish creating the node.<br /><br />Node properties can be edited again later by clicking Tree &gt; Change Node Properties.<br /><br /><a name="h3-17"></a><h3>Duplicating Nodes</h3><br />Another way to create a node is to duplicate an existing node.<br />1. Open the Tree menu.<br /><br />2. Click Duplicate Node to copy the selected node to an identical <a href="https://docs.oracle.com/cd/E19509-01/820-3742/ghpow/index.html">sibling</a>.<br /></div></div>
+<div class="page"><h1><b><u>Creating Nodes</u></b></h1><br /><h1>Creating Nodes</h1><br /> <br /> <br />	1. Select <strong>Add Node</strong> within the <strong>Tree</strong> menu to display the New Node Properties menu.<br /><br />			<strong>NOTES:</strong> <strong>Add Node</strong> creates a sibling to the selected node or a top-level node if no node is selected. To create a child nodes, select<strong> Tree </strong>&gt;<strong> Add Subnode</strong>.<br /><br />	1. Provide a name for the node within<strong> New Node Properties</strong>.<br /><br />	2. (Optional) Select any additional options:<br /><br />		• <strong>Bold</strong> - Increase the font-weight of the node title within the tree view.<br /><br />		• <strong>Use Selected Color</strong> - Change the text color of the node title within the tree view.<br /><br />		• <strong>Use Selected Icon</strong> - Change the node’s icon color.<br /><br />		• <strong>Node Type</strong> - Select a node type.<br />	<br />			<strong>NOTE</strong>: View <a href="Text.html">Text</a> for more detail.<br /><br />		• <strong>Tags for searching</strong> - adds keywords that can be used to find the node in a search. Multiple tags can be separated by a blank space.<br /><br />		• <strong>Read Only</strong> - Can be enabled to lock a node in its current state. This must be disabled to edit or delete the node.<br /><br /><br />	3. Click<strong> OK </strong>to finish creating the node.<br /><br />	Node properties can be edited again later by clicking <strong>Tree</strong> &gt; <strong>Change Node Properties</strong>.<br /><br /><a name="h3-17"></a><h2> Duplicating Nodes</h2><br /><br />	Another way to create a node is to duplicate an existing node.<br /><br />	1. Open the <strong>Tree menu</strong>.<br /><br />	2. Click <strong>Duplicate Node</strong> to copy the selected node to an identical <a href="https://docs.oracle.com/cd/E19509-01/820-3742/ghpow/index.html">sibling</a>.<br /></div></div>
 </body></html>
