--- a/cherrytree_manual.ctb_HTML/Files--Page_Setup_and_Printing.html
+++ b/cherrytree_manual.ctb_HTML/Files--Page_Setup_and_Printing.html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Page Setup and Printing</u></b></h1>Page Setup and Printing<br />Page Setup, found in the File menu, contains options for the document size, orientation, and margins.<br />To print a document, click File &gt; Print, then choose between one of the following options when prompted:<br />• Selected Text Only<br /><br />• Selected Node Only<br /><br />• Selected Node and Subnodes<br /><br />• All the Tree<br /><br />Select New Node in New Page to apply page breaks at the end of nodes within the printed document.</div></div>
+<div class="page"><h1><b><u>Page Setup and Printing</u></b></h1><br /><h1>Page Setup and Printing</h1><br /><br /><br />	<strong>Page Setup</strong>, found in the <strong>File</strong> menu, contains options for the document size, orientation, and margins.<br />	<br />	To print a document, click <strong>File</strong> &gt; <strong>Print</strong>, then choose between one of the following options when prompted:<br />	<br />		• Selected Text Only<br /><br />		• Selected Node Only<br /><br />		• Selected Node and Subnodes<br /><br />		• All the Tree<br /><br />	Select <strong>New Node in</strong> <strong>New Page</strong> to apply page breaks at the end of nodes within the printed document.</div></div>
 </body></html>
