--- a/cherrytree_manual.ctb_HTML/Building_from_Source--macOS_(Not_Tested).html
+++ b/cherrytree_manual.ctb_HTML/Building_from_Source--macOS_(Not_Tested).html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>macOS (Not Tested)</u></b></h1><a name="h3-1"></a><h3>3.4. macOS (Not Tested)</h3><br />Cherrytree is not supported for macOS but can be installed from source using <a href="https://brew.sh/">Homebrew</a>.<br />1. Install <a href="https://www.python.org/downloads/mac-osx/">Python 2.7</a>.<br /><br />2. Install <a href="https://brew.sh/">Homebrew</a>.<br /><br />3. Install Cherrytree’s core dependencies using Homebrew and the following commands:<br />brew install gtk-mac-integrationbrew install pygtksourceviewbrew install dbusbrew install dbus-glib<br />4. (Optional) Install dependencies for additional functionality using PIP (a package manager for Python):<br />1. For multiple instances centralization. (Double-clicking a file that is already open displays the open document instead of opening another instance of that file.)<br />python2 -m pip install dbus-python<br />2. For spell check functionality.<br />python2 -m pip install pyenchant<br />3. For better decoding support of imported and pasted text.<br />python2 -m pip install chardet<br /><br />4. <a href="https://git-scm.com/docs/git-clone">Clone</a> or download the <a href="https://github.com/giuspen/cherrytree">Cherrytree repository</a>.<br /><br />5. Open a terminal, change to the directory containing your local copy of Cherrytree, and run:<br />python2 cherrytree<br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>View this discussion for more information about building Cherrytree on macOS.</td></tr></table><br /></div></div>
+<div class="page"><h1><b><u>macOS (Not Tested)</u></b></h1><br /><h1>macOS (Not Tested)</h1><br /><br /><br />	Cherrytree is not supported for macOS but can be installed from source using <a href="https://brew.sh/">Homebrew</a>.<br />	<br />	1. Install <a href="https://www.python.org/downloads/mac-osx/">Python 2.7</a>.<br /><br />	2. Install <a href="https://brew.sh/">Homebrew</a>.<br /><br />	3. Install Cherrytree’s core dependencies using Homebrew and the following commands:<br />	<br />	<div class="codebox"><div class="codebox">brew&nbsp;<span style="color:#a52a2a;font-weight:700">install</span>&nbsp;gtk-mac-integrationbrew&nbsp;<span style="color:#a52a2a;font-weight:700">install</span>&nbsp;pygtksourceviewbrew&nbsp;<span style="color:#a52a2a;font-weight:700">install</span>&nbsp;dbusbrew&nbsp;<span style="color:#a52a2a;font-weight:700">install</span>&nbsp;dbus-glib</div></div><br />	<br />	4. (Optional) Install dependencies for additional functionality using <strong>PIP </strong>(a package manager for Python):<br />	<br />		•  For multiple instances centralization. (Double-clicking a file that is already open displays the open document instead of opening another instance of that file.)<br />		<br />		<div class="codebox"><div class="codebox">python2&nbsp;-m&nbsp;pip&nbsp;<span style="color:#a52a2a;font-weight:700">install</span>&nbsp;dbus-python</div></div><br />		<br />		•  For spell check functionality.<br />		<br />		<div class="codebox"><div class="codebox">python2&nbsp;-m&nbsp;pip&nbsp;<span style="color:#a52a2a;font-weight:700">install</span>&nbsp;pyenchant</div></div><br />		<br />		•  For better decoding support of imported and pasted text.<br />		<br />		<div class="codebox"><div class="codebox">python2&nbsp;-m&nbsp;pip&nbsp;<span style="color:#a52a2a;font-weight:700">install</span>&nbsp;chardet</div></div><br /><br />		•  <a href="https://git-scm.com/docs/git-clone">Clone</a> or download the <a href="https://github.com/giuspen/cherrytree">Cherrytree repository</a>.<br /><br />	5. Open a terminal, change to the directory containing your local copy of Cherrytree, and run:<br />	<br />	<div class="codebox"><div class="codebox">python2&nbsp;cherrytree</div></div><br />	<br />	<strong>NOTE:</strong> View this discussion for more information about building Cherrytree on macOS.<br /></div></div>
 </body></html>
