--- a/cherrytree_manual.ctb_HTML/Files--Creating_and_Opening.html
+++ b/cherrytree_manual.ctb_HTML/Files--Creating_and_Opening.html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Creating and Opening</u></b></h1>Creating and Opening<br />To create a new document, select New Instance from the File menu.<br />To open an existing file:<br />1. Select Open File from the File menu.<br /><br />2. Select a document to open.<br /><br />3. Click Open.<br /><br />Recently used documents can be opened more quickly by selecting the document name within the File &gt; Recent Files submenu.</div></div>
+<div class="page"><h1><b><u>Creating and Opening</u></b></h1><br /><h1>Creating and Opening</h1><br /><br /><br />	To create a new document, select <strong>New Instance</strong> from the<strong> File</strong> menu.<br /><br />	To open an existing file:<br />	<br />		1. Select <strong>Open File</strong> from the<strong> File</strong> menu.<br /><br />		2. Select a document to open.<br /><br />		3. Click <strong>Open</strong>.<br /><br />	Recently used documents can be opened more quickly by selecting the document name within the <strong>File</strong> &gt;<strong> Recent Files</strong> submenu.</div></div>
 </body></html>
