--- a/cherrytree_manual.ctb_HTML/Installation.html
+++ b/cherrytree_manual.ctb_HTML/Installation.html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Installation</u></b></h1><br /><h1>Installation</h1><br /><br /><br />	Cherrytree is available for Linux and Windows.<br /><br /><span style="color:#bb0a0a;">	</span><h2>Content</h2><br /><br />	•  <a href="Installation--Fedora_(Red_Hat).html">Fedora (Red Hat)</a><br />	•  <a href="Installation--Ubuntu_(Debian).html">Ubuntu (Debian)</a><br />	   ◇ <a href="Installation--Ubuntu_(Debian).html#h2-1">Option One: Ubuntu Software</a><br />	   ◇ <a href="Installation--Ubuntu_(Debian).html#h2-2">Option Two: Command Line</a><br />	•  <a href="Installation--Windows.html">Windows</a><br /><br /><br /><br /><br /></div></div>
+<div class="page"><h1><b><u>Installation</u></b></h1><br /><h1>Installation</h1><br /><br /><br />	Cherrytree is available for Linux and Windows.<br /><br /><span style="color:#bb0a0a;">	</span><h2>Content</h2><br />	•  <a href="Installation--Fedora_(Red_Hat).html">Fedora (Red Hat)</a><br />	•  <a href="Installation--Ubuntu_(Debian).html">Ubuntu (Debian)</a><br />		• <a href="Installation--Ubuntu_(Debian).html#h2-1">Option One: Ubuntu Software</a><br />		• <a href="Installation--Ubuntu_(Debian).html#h2-2">Option Two: Command Line</a><br />	•  <a href="Installation--Windows.html">Windows</a><br /><br /><br /><br /><br /></div></div>
 </body></html>
