--- a/cherrytree_manual.ctb_HTML/Introduction.html
+++ b/cherrytree_manual.ctb_HTML/Introduction.html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Introduction</u></b></h1><br /><img src="images\1-1.png" alt="images\1-1.png" /><h1>Cherrytree User Manual</h1><br />          version 0.38.7, December, 2018<br /><br /><br />	Cherrytree is a free and open source, hierarchical, note-taking application. It can store text, images, files, links, tables, and executable snippets of code. This application is under active development. Details regarding updates can be found in Cherrytree’s <a href="https://github.com/giuspen/cherrytree/blob/master/changelog.txt">changelog</a>.<br /><br /><br /><br />	<h2>Content</h2><br /><br />	&lt;TODO: Insert TOC here after formatting.&gt;<br /><br /></div></div>
+<div class="page"><h1><b><u>Introduction</u></b></h1><br /><img src="images\1-1.png" alt="images\1-1.png" /><h1>Cherrytree User Manual</h1><br />          version 0.38.7, December, 2018<br /><br /><br />	Cherrytree is a free and open source, hierarchical, note-taking application. It can store text, images, files, links, tables, and executable snippets of code. This application is under active development. <br />	<br />	Details regarding updates can be found in Cherrytree’s <a href="https://github.com/giuspen/cherrytree/blob/master/changelog.txt">changelog</a>.<br /><br /><br /><br />	<h2>Content</h2><br /><br />	&lt;TODO: Insert TOC here after formatting.&gt;<br /><br /></div></div>
 </body></html>
