--- a/cherrytree_manual.ctb_HTML/Quick_Start--Export_a_Document.html
+++ b/cherrytree_manual.ctb_HTML/Quick_Start--Export_a_Document.html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Export a Document</u></b></h1><a name="h3-1"></a><h3>4.5. Export a Document</h3><br />1. Open the Export menu and select a document type.<br /><br />2. Select the scope of content to be exported then click OK.<br /><br />3. Name the exported document and select a folder to save it to.<br /><br />See <a href="http://#_exporting">5.5 Exporting</a> for more detail.<br /></div></div>
+<div class="page"><h1><b><u>Export a Document</u></b></h1><br /><h1>Export a Document</h1><br /><br /><br />	1. Open the <strong>Export </strong>menu and select a document type.<br /><br />	2. Select the scope of content to be exported then click<strong> OK</strong>.<br /><br />	3. Name the exported document and select a folder to save it to.<br /><br />	See <a href="Files--Exporting.html">Exporting</a> for more detail.<br /></div></div>
 </body></html>
