--- a/cherrytree_manual.ctb_HTML/Quick_Start--Insert_Objects.html
+++ b/cherrytree_manual.ctb_HTML/Quick_Start--Insert_Objects.html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Insert Objects</u></b></h1><a name="h3-1"></a><h3>4.3. Insert Objects</h3><br />Objects can be inserted from the Edit menu.<br />Cherrytree supports the following objects:<br />• <a href="http://#_images">Image</a><br /><br />• <a href="http://#_tables">Table</a><br /><br />• <a href="http://#_codebox">CodeBox</a><br /><br />• <a href="http://#file-object">File</a><br /><br />• Link<br /><br />• <a href="http://#_anchors">Anchor</a><br /><br />• <a href="http://#_table_of_contents">TOC (Table of Contents)</a><br /><br />• <a href="http://#_time_stamps">Timestamp</a><br /><br />• <a href="http://#_special_characters">Special Character</a><br /><br />• <a href="http://#_horizontal_rule">Horizontal Rule</a><br /><br />See <a href="http://#_objects">8. Objects</a> for more detail.<br /></div></div>
+<div class="page"><h1><b><u>Insert Objects</u></b></h1><br /><h1>Insert Objects</h1><br /><br /><br />	Objects can be inserted from the<strong> Edit</strong> menu.<br />	<br />	Cherrytree supports the following objects:<br />	<br />		• <a href="Objects--Images.html">Image</a><br /><br />		• <a href="Objects--Tables.html">Table<br /></a><br />		• <a href="Objects--Codebox.html">CodeBox</a><br /><br />		• <a href="Objects--Files.html">File</a><br /><br />		• <a href="Objects--Links.html">Link</a><br /><br />		• <a href="Objects--Anchors.html">Anchor</a><br /><br />		• <a href="Objects--Table_of_Contents.html">TOC (Table of Contents)</a><br /><br />		• <a href="Objects--Timestamps.html">Timestamp</a><br /><br />		• <a href="Objects--Special_Characters.html">Special Character</a><br /><br />		• <a href="Objects--Horizontal_Rule.html">Horizontal Rule</a><br /><br />	See <a href="Objects.html">Objects</a> for more detail.<br /></div></div>
 </body></html>
