--- a/cherrytree_manual.ctb_HTML/Quick_Start--Node_Management.html
+++ b/cherrytree_manual.ctb_HTML/Quick_Start--Node_Management.html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Node Management</u></b></h1><a name="h3-1"></a><h3>4.2. Node Management</h3><br />Cherrytree allows you to organize notes using a tree structure.<br /><br /><a name="h3-2"></a><h3>Creating Your First Node</h3><br />1. Click Tree &gt; Add Node to display the New Node Properties menu.<br /><br />2. Enter a Node Name.<br /><br />3. Select a Node Type then click OK.<br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>View 7. Text of this manual for details about Node Type.</td></tr></table><br /><br /><br /><a name="h3-3"></a><h3>Node Menu</h3><br />Right-click a node to display a menu of the options available to it.<br />Commonly used options include:<br />• Add Node - Creates a node on the same hierarchical level as your selected node.<br /><br />• Add SubNode - Creates a child node under the selected node.<br /><br />• Change Node Properties - Edit the settings of the current node.<br /><br />• Delete Node - Deletes the selected node.<br /><br />See 6. Nodes for more detail.</div></div>
+<div class="page"><h1><b><u>Node Management</u></b></h1><br /><h1>Node Management</h1><br /><br /><br />	Cherrytree allows you to organize notes using a tree structure.<br /><br /><h2>Creating Your First Node</h2><br /><br />	1. Click Tree &gt; Add Node to display the New Node Properties menu.<br /><br />	2. Enter a Node Name.<br /><br />	3. Select a Node Type then click OK.<br /><br />		<strong>NOTE:</strong> View 7. Text of this manual for details about Node Type.<br /><br /><h2>Node Menu</h2><br /><br />	Right-click a node to display a menu of the options available to it.<br />	<br />	Commonly used options include:<br /><br />		• <strong>Add Node</strong> - Creates a node on the same hierarchical level as your selected node.<br /><br />		• <strong>Add SubNode</strong> - Creates a child node under the selected node.<br /><br />		• <strong>Change Node Properties</strong> - Edit the settings of the current node.<br /><br />		• <strong>Delete Node </strong>- Deletes the selected node.<br /><br />	See <a href="Files--Nodes.html">Nodes</a> for more detail.</div></div>
 </body></html>
