--- a/cherrytree_manual.ctb_HTML/Quick_Start--Save_Your_Notes.html
+++ b/cherrytree_manual.ctb_HTML/Quick_Start--Save_Your_Notes.html
@@ -46,12 +46,11 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-</ol>
-<p><a href="Nodes.html">Nodes</a></p>
-
+<li><a href="Files--Nodes.html">Nodes</a></li>
 <ol>
-<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
+</ol>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -95,5 +94,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Save Your Notes</u></b></h1><a name="h3-1"></a><h3>4.4. Save Your Notes</h3><br />1. Documents are saved by pressing <code>CTRL</code>+<code>S</code> or by selecting Save from the File menu.<br />If you have previously saved the current document, you do not need to perform steps 2 and 3.<br /><br />2. If this is your first time saving the current document, select a storage type then click OK.<br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>See Storage Types and Password Protection for more details.</td></tr></table><br /><br />3. Name the document and select a folder to save it to.<br /><br />See <a href="http://#_saving">5.2 Saving</a> for more detail.<br /></div></div>
+<div class="page"><h1><b><u>Save Your Notes</u></b></h1><br /><h1>Save Your Notes</h1><br /><br /><br />	1. Documents are saved by pressing <strong>CTRL+S </strong>or by selecting <strong>Save</strong> from the <strong>File </strong>menu.<br />	<br />		If you have previously saved the current document, you do not need to perform steps 2 and 3.<br /><br />	2. If this is your first time saving the current document, select a storage type then click <strong>OK</strong>.<br />	<br />		<strong>NOTE</strong>: See Storage Types and Password Protection for more details.<br /><br />	3. Name the document and select a folder to save it to.<br /><br />	See <a href="Files--Saving.html">Saving</a> for more detail.<br /></div></div>
 </body></html>
